--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-.red {background-color:red;}
-.blue {background-color:blue;}
+ul {
+	display: flex;
+	font-family: sans-serif;
+	padding: 0 100px 0 100px;
+	list-style-type: none;
+}
+
+li {
+	/*flex-grow: 1;*/
+	color: white;
+	padding: 20px;
+
+}
+
+li:hover {
+	color: black;
+	background-color: white;
+}
+
+.red {
+	background-color:red;
+}
+
+.blue {
+	background-color:blue;
+}
+
+.green {
+	background-color:green;
+}
+
+.grow {
+	flex-grow: 1;
+}
 
